# vending-machine

./: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  vending_machine.thrift
config/: service-config.json
gen-cpp/: BeveragePreferenceService.cpp  BeveragePreferenceService.h  BeveragePreferenceService_server.skeleton.cpp  OrderBeverageService.cpp  OrderBeverageService.h  OrderBeverageService_server.skeleton.cpp  UpdateWeatherService.cpp  UpdateWeatherService.h  UpdateWeatherService_server.skeleton.cpp  WeatherService.cpp  WeatherService.h  WeatherService_server.skeleton.cpp  vending_machine_types.cpp  vending_machine_types.h
gen-lua/: vending_machine_OrderBeverageService.lua  vending_machine_UpdateWeatherService.lua  vending_machine_WeatherService.lua  vending_machine_ttypes.lua
gen-py/vending_machine/: OrderBeverageService-remote  OrderBeverageService.py  UpdateWeatherService-remote  UpdateWeatherService.py  WeatherService-remote  WeatherService.py  __init__.py  ttypes.py
nginx_reverse_proxy/conf/: nginx.conf
nginx_reverse_proxy/lua-scripts/api/beverageservice/: order.lua
script/: generate_request.sh
src/: CMakeLists.txt  ClientPool.h  GenericClient.h  ThriftClient.h  logger.h  utils.h
src/BeveragePreferenceService/: BeveragePreferenceHandler.h  BeveragePreferenceService.cpp  CMakeLists.txt
src/OrderBeverageService/: CMakeLists.txt  OrderBeverageHandler.h  OrderBeverageService.cpp
src/WeatherService/: CMakeLists.txt  WeatherHandler.h  WeatherService.cpp
